--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Sapper App",
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
+    "dev": "sapper dev --no-hot",
     "build": "sapper build",
     "export": "sapper export",
     "start": "node __sapper__/build",
