--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "sirv": "^0.4.0"
   },
   "devDependencies": {
+    "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
+    "svelte-preprocess": "^3.2.2",
     "webpack": "^4.7.0"
   }
 }
