--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "devDependencies": {
     "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-svelte3": "^2.7.3",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "sapper": "^0.27.0",
