--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-svelte3": "^2.7.3",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "prettier-plugin-svelte": "^0.7.0",
     "sapper": "^0.27.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
