--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "test": "run-p --race dev cy:run",
     "lint": "npm-run-all -c lint:*",
     "lint:eslint": "eslint '**/*.js'",
-    "lint:stylelint": "stylelint '**/*.{css,scss}'",
+    "lint:stylelint": "stylelint '**/*.{css,scss,svelte}'",
     "lint:prettier": "prettier --check '**/*.{js,scss,svelte}'",
     "format": "npm-run-all -c format:*",
     "format:eslint": "eslint --fix '**/*.js'",
-    "format:stylelint": "stylelint --fix '**/*.{css,scss}'",
+    "format:stylelint": "stylelint --fix '**/*.{css,scss,svelte}'",
     "format:prettier": "prettier --write '**/*.{js,scss,svelte}'"
   },
   "dependencies": {
