--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-plugin-svelte": "^0.7.0",
+    "prettier-stylelint": "^0.4.2",
     "sapper": "^0.27.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
