--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run",
     "lint": "npm-run-all -c lint:*",
-    "lint:eslint": "eslint '**/*.js'",
-    "lint:stylelint": "stylelint '**/*.{css,scss,svelte}'",
-    "lint:prettier": "prettier --check '**/*.{js,scss,svelte}'",
+    "lint:eslint": "eslint 'src/**/*.{js,svelte}'",
+    "lint:stylelint": "stylelint 'src/**/*.{css,scss,svelte}'",
+    "lint:prettier": "prettier --check 'src/**/*.{js,scss,svelte}'",
     "format": "npm-run-all -c format:*",
-    "format:eslint": "eslint --fix '**/*.js'",
-    "format:stylelint": "stylelint --fix '**/*.{css,scss,svelte}'",
-    "format:prettier": "prettier --write '**/*.{js,scss,svelte}'"
+    "format:eslint": "eslint --fix 'src/**/*.{js,svelte}'",
+    "format:stylelint": "stylelint --fix 'src/**/*.{css,scss,svelte}'",
+    "format:prettier": "prettier --write 'src/**/*.{js,scss,svelte}'"
   },
   "dependencies": {
     "compression": "^1.7.1",
@@ -36,8 +36,7 @@
     "eslint-plugin-svelte3": "^2.7.3",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "prettier-plugin-svelte": "^0.7.0",
+    "prettier": "^1.19.0",
     "prettier-stylelint": "^0.4.2",
     "sapper": "^0.27.0",
     "sass-loader": "^8.0.0",
