--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "polka": "next",
+    "polka": "^1.0.0-next.9",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
